compiler/tests/compile-error/vector-assoc-out-of-bounds.arret
(import [stdlib base])

(def _ (vector-assoc [1 2 3] 5 0))
      ;^^^^^^^^^^^^^^^^^^^^^^^^^^ ERROR index 5 out of bounds for vector of length 3

(defn main! () ->! ())